# Scriptorium-AI

./: .gitignore  CLAUDE.md  Dockerfile  README.md  STATUS.md
.huggingface/: README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: corpora.py  export.py  ingest.py  jobs.py  manuscripts.py  models_api.py  pages.py  profiles.py  search.py
backend/app/models/: __init__.py  corpus.py  database.py  job.py  model_config_db.py
backend/app/schemas/: annotation.py  corpus_profile.py  image.py  model_config.py  page_master.py
backend/app/services/: corpus_runner.py  job_runner.py
backend/app/services/ai/: __init__.py  analyzer.py  base.py  client_factory.py  master_writer.py  model_registry.py  prompt_loader.py  provider_google_ai.py  provider_mistral.py  provider_vertex_key.py  provider_vertex_sa.py  response_parser.py
backend/app/services/export/: __init__.py  iiif.py
backend/app/services/image/: __init__.py  normalizer.py
backend/app/services/ingest/: __init__.py  iiif_fetcher.py
backend/tests/: conftest_api.py  test_ai_analyzer.py  test_ai_providers.py  test_api_corpora.py  test_api_corrections.py  test_api_export.py  test_api_ingest.py  test_api_jobs.py  test_api_models.py  test_api_pages.py  test_api_profiles.py  test_api_providers.py  test_api_search.py  test_export_iiif.py  test_image_pipeline.py  test_job_runner.py  test_profiles.py  test_provider_mistral.py  test_schemas.py
frontend/: index.html  package.json  vite.config.ts
infra/: Dockerfile  docker-compose.yml
profiles/: early-modern-print.json  (+3 more)
(+24 files in other folders)
